--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script type="text/javscript" src="app.js"> </script>
+  <script type="text/javascript" src="app.js"> </script>
 </head>
 
 <body>
@@ -25,17 +25,17 @@
       <h4> Ways to Create Responsive Web Design </h4>
       <p> 
         <ul>
-          <li> Creating viewports: Establishing meta viewport tags for computer width and scale adjustment </li>
-          <li> Using %s: Applying percentages instead of pixels in CSS code </li>
-          <li> Mobile First Development: Working on a website starting from mobile phones to be more easily adapted onto computers later on </li>
+          <li> Creating viewports: Establishing meta viewport tags for browser to interpret and adjust computer width and scale adjustment of a web page.</li>
+          <li> Using %s: By applying percentages instead of pixels in CSS code, images would change proportionally to the browser when individual shrinks or enlarges the page. </li>
+          <li> Mobile First Development: Working on a website starting from mobile phones to be more easily adapted onto computers later on. </li>
           <li> Flexbox: The process of creating flex containers through HTML and CSS for purposes of adjusting text width and height to make the best use of webpage spacing </li>
         </ul>
       </p>
     </div>
 
-    <div class="article">
+    <div class="article" id="fourth">
       <h5> Arrays and Loops</h5>
-      <p> Zee Final KaPoya Quatro </p>
+      <p> Arrays are objects that are capable of storing two or more values into one single variable, in which values could easily be added or removed. To add, loops are used in JavaScript to run a block of code for a set amount of times until the code's conditions are met.</p>
     </div>
 
   </div>
